@@ -1,5 +1,7 @@
 Revision history for Perl module Git::PurePerl:
 
+     - Add Git::PurePerl::Util with handy current_git_dir() util (Kent Fredric)
+
 0.50 Sat Jan 25 14:58:16 CET 2014
      - Now with the changes from 0.49 in CHANGES. That's it.
 
